--- a/Cannacoin.html
+++ b/Cannacoin.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-    <title>Simple Reddcoin Widget</title>
+    <title>Simple Cannacoin Widget</title>
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 
     <style type="text/css">
